<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-142dp"
        tools:layout_editor_absoluteY="16dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"

                android:gravity="center"
                android:text="@string/register_company"
                android:textColor="@color/secondaryColor"
                android:textSize="40sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/register_phoneNumber"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/register_firstname"
                android:layout_width="0dp"
                android:layout_height="50dp"

                android:layout_marginEnd="10dp"

                android:background="@color/transparent_very_dark"
                android:hint="@string/register_prompt_firstname"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/transparent_light"
                android:textColorHint="@color/white"

                app:layout_constraintBaseline_toBaselineOf="@+id/register_lastname"
                app:layout_constraintEnd_toStartOf="@+id/register_lastname"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/register_lastname"
                android:layout_width="0dp"
                android:layout_height="50dp"

                android:layout_marginTop="30dp"

                android:background="@color/transparent_very_dark"
                android:hint="@string/register_prompt_lastname"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/transparent_light"
                android:textColorHint="@color/white"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/register_firstname"
                app:layout_constraintTop_toBottomOf="@+id/register"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlSymmetry" />


            <EditText
                android:id="@+id/register_phoneNumber"
                android:layout_width="0dp"
                android:layout_height="50dp"

                android:layout_marginTop="20dp"

                android:background="@color/transparent_very_dark"
                android:hint="@string/register_prompt_phone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/transparent_light"
                android:textColorHint="@color/white"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/register_username"
                app:layout_constraintStart_toStartOf="@+id/register_firstname"
                app:layout_constraintTop_toBottomOf="@+id/register_lastname"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/register_username"
                android:layout_width="0dp"
                android:layout_height="50dp"

                android:layout_marginTop="20dp"

                android:background="@color/transparent_very_dark"
                android:hint="@string/login_prompt_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/transparent_light"
                android:textColorHint="@color/white"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_phoneNumber"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="0dp"
                android:layout_height="50dp"

                android:layout_marginTop="20dp"

                android:background="@color/transparent_very_dark"
                android:hint="@string/login_prompt_password"
                android:imeActionLabel="@string/login_action_sign_in"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/transparent_light"
                android:textColorHint="@color/white"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/register_repeat_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_username"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/register_repeat_password"
                android:layout_width="0dp"
                android:layout_height="50dp"

                android:layout_marginTop="20dp"

                android:background="@color/transparent_very_dark"
                android:hint="@string/register_prompt_repeat_password"
                android:imeActionLabel="@string/login_action_sign_in"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/transparent_light"
                android:textColorHint="@color/white"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_password"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/register_nip_number"
                android:layout_width="0dp"
                android:layout_height="50dp"

                android:layout_marginTop="20dp"

                android:background="@color/transparent_very_dark"
                android:hint="@string/register_prompt_nip"
                android:imeActionLabel="@string/login_action_sign_in"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingStart="10dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/transparent_light"

                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_repeat_password"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="150dp"
                android:layout_height="50dp"

                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"

                android:background="@drawable/buttons_background"
                android:text="@string/login_action_register"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_small_text_size"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/register_nip_number"
                app:layout_constraintTop_toBottomOf="@+id/register_nip_number"
                app:layout_constraintVertical_bias="0.4" />

            <ProgressBar
                android:id="@+id/register_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>