<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_centerInParent="true">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/register_freelancer"
                android:textColor="@color/secondaryColor"
                android:textSize="@dimen/bigger_text_size"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginTop="50dp"

                android:background="@color/transparent_very_dark"
                android:hint="@string/login_prompt_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/transparent_light"
                android:textColorHint="@color/white"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginTop="25dp"

                android:background="@color/transparent_very_dark"
                android:hint="@string/login_prompt_password"
                android:imeActionLabel="@string/login_action_sign_in"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/transparent_light"
                android:textColorHint="@color/white"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_username"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/register_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginTop="25dp"

                android:background="@color/transparent_very_dark"
                android:hint="@string/register_prompt_repeat_password"
                android:imeActionLabel="@string/login_action_sign_in"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/transparent_light"
                android:textColorHint="@color/white"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_password"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="175dp"
                android:layout_height="50dp"

                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="start"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"

                android:background="@drawable/buttons_background"
                android:text="@string/login_action_register"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_small_text_size"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_repeat_password"
                app:layout_constraintVertical_bias="0.0" />

            <ProgressBar
                android:id="@+id/register_loading"
                android:layout_width="100dp"
                android:layout_height="5dp"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_button" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>