<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/background"
    tools:context=".StartActivity">

    <!-- Illustration by https://icons8.com/illustrations/author/zD2oqC8lLBBA from https://icons8.com/illustrations-->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/start_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/start_panel_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/start_panel_image"
            android:scaleType="centerInside"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:src="@drawable/start_panel_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/start_version_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_choose_your_version"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_panel_image"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@color/transparent_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_version_text"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/start_for_companies_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"

            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttons_background"
            android:text="@string/start_for_companies"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toTopOf="@+id/start_for_freelancers_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/start_for_freelancers_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"

            android:layout_marginEnd="20dp"
            android:background="@drawable/buttons_background"
            android:text="@string/start_for_freelancers"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_version_text"
            app:layout_constraintVertical_bias="0.81" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>